<resources>
    <string name="app_name">Calculator_v2</string>

    <string name="simple_calculator">Simple calculator</string>
    <string name="advanced_calculator">Advanced calculator</string>
    <string name="about_me">About Me</string>
    <string name="exit">Exit</string>


    <string name="clear">C/CE</string>
    <string name="percentages">%</string>
    <string name="minus">+/-</string>
    <string name="point">.</string>
    <string name="sum">+</string>
    <string name="mul">*</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="calc">=</string>

    <string name="square">^2</string>
    <string name="power">^</string>
    <string name="root">sqrt(</string>
    <string name="brackets">()</string>

    <string name="sin">sin(</string>
    <string name="cos">cos(</string>
    <string name="tan">tan(</string>
    <string name="log">log(</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
</resources>