<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/MainMenuLayout"
    android:background="@color/lightBlack"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/simpleCalculatorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_calculator" />

        <Button
            android:id="@+id/advancedCalculatorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_calculator" />

        <Button
            android:id="@+id/aboutMeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_me" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>